--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- мета-теги -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <!-- SEO -->
+    <title>Владислав | Frontend-разработчик (React/TypeScript)</title>
+    <meta name="description" content="Портфолио фронтенд-разработчика." />
+    <meta
+      name="keywords"
+      content="frontend, разработчик, react, typescript, портфолио"
+    />
+    <!-- Иконка -->
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <!-- Шрифты -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=JetBrains+Mono:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
